uploaded background images and added tada function

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body[data-design="option-1"] {
     padding-top: 90px;
     max-width: 100%;
     overflow-x: hidden;
-    background-image: url("https://web-presence.biz/backgroundWallpaper/18.jpg");
+    background-image: url("../img/18.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -74,7 +74,7 @@ body[data-design="option-2"] {
 
 body[data-design="option-2"] .card-deck .card-header {
     border-bottom: #fff 1px dotted;
-    background: url(https://web-presence.biz/backgroundWallpaper/8.jpg);
+    background: url("../img/8.jpg");
 }
 
 body[data-design="option-2"] .card:hover .card-header {
@@ -132,7 +132,7 @@ body[data-design="option-3"] {
     padding-top: 90px;
     max-width: 100%;
     overflow-x: hidden;
-    background: url("https://web-presence.biz/backgroundWallpaper/13.jpg");
+    background: url("../img/13.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -238,7 +238,7 @@ body[data-design="option-4"] .card-deck .card {
 
 body[data-design="option-4"] .card-deck .card-header {
     color: #fff;
-    background-image: url("https://web-presence.biz/backgroundWallpaper/12.jpg");
+    background-image: url("../img/12.jpg");
 }
 
 body[data-design="option-4"] .card-deck .card-body {
@@ -1231,7 +1231,7 @@ body[data-design="option-2"] #navWrap a.active:hover {
 body[data-design="option-2"] footer,
 body[data-design="option-2"] #navWrap {
     background-color: #363636;
-    background: url("https://web-presence.biz/backgroundWallpaper/8.jpg");
+    background: url("../img/8.jpg");
     /*background-image: -moz-linear-gradient(top, #444444, #222222);
   background-image: -webkit-gradient(
     linear,
@@ -1789,7 +1789,7 @@ body[data-design="option-4"] #navWrap {
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff444444', endColorstr='#ff222222', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);*/
-    background-image: url("https://web-presence.biz/backgroundWallpaper/6.jpg");
+    background-image: url("../img/6.jpg");
 
     text-align: center;
 }
