fixed application thumbnail rollovers4

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ body[data-design="option-2"] h1 {
 
 body[data-design="option-2"] h2 {
     font-size: 1.8rem;
+    color: #fff;
 }
 
 body[data-design="option-2"] h3 {
