--- a/css/style.css
+++ b/css/style.css
@@ -134,11 +134,12 @@ body[data-design="option-3"] {
     padding-top: 90px;
     max-width: 100%;
     overflow-x: hidden;
-    background: url("../img/13.jpg");
+    /* background: url("../img/13.jpg");*/
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
+
 
 body[data-design="option-3"] h1,
 body[data-design="option-3"] h2,
@@ -2338,16 +2339,51 @@ body[data-design="option-4"] {
 }
 
 
-/*max-width 767*/
+/*max-width 768*/
+@media (max-width: 768px) {
+
+    body[data-design="option-1"]::before,
+    body[data-design="option-2"]::before,
+    body[data-design="option-3"]::before,
+    body[data-design="option-4"]::before {
+        content: "";
+
+        position: fixed;
+        top: 10px;
+        left: -200px;
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/MA_Logo.png");
+        background-repeat: no-repeat;
+        background-position: top;
+        filter: grayscale(100%);
+        opacity: .2;
+
+    }
+
+
+}
 
 /* No greater than 900px, no less than 455px */
-@media (max-width: 767px) and (min-width: 455px) {
+@media ((max-width: 768px) and (min-width: 455px)) {
+
     #designOptions {
         margin-top: 5%;
     }
+
+
+
 }
 
-/*end 767 -455*/
+/*end 768 -455*/
+/*max-width 768*/
+@media (max-width: 455px) {
+
+    body[data-design="option-2"]::before {
+        left: -75px;
+    }
+
+}
 
 .teaserImg {
     max-height: 160px;
