--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,14 @@
 
 @import url("https://fonts.googleapis.com/css?family=Carter+One|Wire+One|Oswald|Saira+Extra+Condensed|Passion+One|Yanone+Kaffeesatz|Carter+One|Racing+Sans+One|Marcellus+SC|Teko&display=swap");
 
+body {
+    font-size: 1.2rem;
+}
+
 /*    START OPTION 1 BODY AND HEADERS */
 body[data-design="option-1"] {
     font-family: "Oswald", sans-serif !important;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     padding-top: 90px;
     max-width: 100%;
     overflow-x: hidden;
@@ -70,7 +74,7 @@ body[data-design="option-2"] {
     padding-top: 90px;
     max-width: 100%;
     overflow-x: hidden;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 body[data-design="option-2"] .card-deck .card-header {
@@ -119,7 +123,7 @@ body[data-design="option-2"] h5 {
 }
 
 body[data-design="option-2"] .card-header {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 body[data-design="option-2"] .card-deck .card {
@@ -211,7 +215,7 @@ body[data-design="option-3"] .card:hover .btn-outline-primary {
 body[data-design="option-4"] {
     font-family: "Yanone Kaffeesatz", sans-serif;
     text-transform: uppercase;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     padding-top: 90px;
     max-width: 100%;
     overflow-x: hidden;
@@ -419,8 +423,8 @@ form .form-group ul {
 }
 
 .imgFrame ul li {
-    font-size: 0.8rem;
-    line-height: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.4rem;
 }
 
 .imgFrame label {
@@ -436,7 +440,7 @@ form .form-group ul {
 .card {
     cursor: pointer;
     border-radius: 0px;
-
+    min-height: 325px;
     border: 0px;
     background-color: transparent;
     overflow: hidden;
@@ -800,11 +804,16 @@ input[value="option-4"]+.checkmark {
 }
 
 /*start blog css*/
-
 article {
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding: 50px;
 }
+
+body[data-design="option-2"] article {
+    font-size: 1.2rem;
+}
+
+
 
 ul.noStyleSocial {
     padding-top: 20px;
@@ -1202,8 +1211,8 @@ body[data-design="option-2"] .imgFrame:hover {
 }
 
 body[data-design="option-2"] .imgFrame ul li {
-    font-size: 1rem;
-    line-height: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.4rem;
 }
 
 [data-design="option-2"] #items .card-header.fadeDark {
@@ -1221,7 +1230,7 @@ body[data-design="option-2"] .imgFrame ul li {
 [data-design="option-2"] .modal-body ul {
     padding-left: 0px;
     list-style-type: none;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 /*footer*/
@@ -1944,7 +1953,7 @@ body[data-design="option-4"] {
     }
 
     .imgFrame ul li {
-        font-size: 0.8rem;
+        font-size: 1.2rem;
         line-height: 1.25;
     }
 }
@@ -1977,6 +1986,10 @@ body[data-design="option-4"] {
 
     .modal-dialog {
         margin-top: 0px;
+    }
+
+    .card {
+        min-height: 350px;
     }
 
     .card-body .list-unstyled {
