--- a/css/style.css
+++ b/css/style.css
@@ -2394,6 +2394,18 @@ body[data-design="option-4"] {
 
 }
 
+@media ((max-width: 768px)) {
+
+    .list-group-item {
+
+        margin-left: 10px;
+        margin-right: 30px;
+        margin-top: 25px;
+        overflow: hidden;
+    }
+
+}
+
 /* No greater than 900px, no less than 455px */
 @media ((max-width: 768px) and (min-width: 455px)) {
 
@@ -2401,15 +2413,10 @@ body[data-design="option-4"] {
         margin-top: 5%;
     }
 
-    .videoList .list-group,
-    .videoList .list-group .list-group-item {
-        margin-top: 25px;
-        margin-left: 10px;
-        margin-right: 30px;
-    }
+
 
     .thumbContainer {
-        height: 350px;
+        height: 300px;
     }
 
     i.play-float-icon {
