--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,15 @@ footer {
     z-index: 5;
 }
 
-#showAlert {
-    margin-top: 0%;
-    /*position: fixed;*/
-    z-index: 150;
-    width: 100%;
+#globalAlert {
+    text-align: center;
+    position: fixed;
+    top: 10%;
+    right: 0;
+    left: 0;
+    padding: 1rem;
+    z-index: 1031;
+
 }
 
 article a {
