old style conflict

--- a/css/style.css
+++ b/css/style.css
@@ -2255,8 +2255,8 @@ body[data-design="option-4"] {
     [data-design="option-4"] .card:nth-child(odd) {
         background-color: #666565;
         /*border-bottom: #800000 10px solid;
-    border-top: #800000 10px solid;*/
-        color: #fff;
+    border-top: #800000 10px solid;
+        color: #fff;*/
     }
 
     [data-design="option-4"] nav a[data-portfolio] {
