--- a/css/style.css
+++ b/css/style.css
@@ -2478,7 +2478,7 @@ body.entered[data-design="option-4"]::before {
 
 }
 
-/* No greater than 900px, no less than 455px  */
+/* No greater than 900px, no less than 455px 
 @media ((max-width: 768px) and (min-width: 455px)) {
 
     #designOptions {
@@ -2488,7 +2488,7 @@ body.entered[data-design="option-4"]::before {
 
 
 
-}
+} */
 
 /*end 768 -455*/
 /*max-width 768*/
