re-targeted my resume text no more modal5

--- a/css/style.css
+++ b/css/style.css
@@ -2572,6 +2572,11 @@ body.entered[data-design="option-4"]::before {
         left: -75px;
     }
 
+    .inline {
+        display: block;
+        width: 100%;
+
+    }
 }
 
 .teaserImg {
